--- a/.github/workflows/plz_work.yml
+++ b/.github/workflows/plz_work.yml
@@ -38,12 +38,15 @@ jobs:
         run: cat /etc/os-release
       
       # update system and install something 
-      - name: update the
+      - name: update the os and install something
         run: |
           sudo apt update -y
           sudo apt install -y bsdmainutils
           cal
-        
+   
+      # check disk space
+      - name: finding out system resource
+        run: df -h
       
         
       # Runs a set of commands using the runners shell
